# webcompat-measurement-pipeline

./: README.md
analyzer/: .gitignore  pyproject.toml
analyzer/webcompat_measurement_analyzer/: generate_metrics.py  generate_page_graphs.py  generate_report.py  generate_subgraphs.py  generate_summaries.py  vectorize_and_classify.py
analyzer/webcompat_measurement_analyzer/_lib/: __init__.py  extract.py  paths.py  storage.py
classifier/: README.md  requirements.txt
classifier/notebooks/: Experiments.ipynb  Feature Engineering.ipynb  PG-GNN.ipynb
classifier/src/: config.py  data_loader.py  experiments.py  features.py  plots.py  transformers.py  util.py
crawler/: .gitignore  crawl-and-snapshot.js  generate-filter-lists.js  generate-serialized-engines.js  package.json  parse-commit-log.js
crawler/easylist-templates/: fanboy-annoyance.handlebars  fanboy-social.handlebars
crawler/lib/: collectEntryCommits.js  generateFilterLists.js  generateSerializedEngine.js  loadEasyListTemplates.js  log.js  paths.js
